# scikit-misc

./: .coveragerc  .gitignore  Makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: testing.yml
doc/: conf.py
skmisc/: __init__.py
skmisc/loess/src/: S.h  _loess.pyx
