# Reference https://github.com/pydata/xarray/blob/main/pyproject.toml
[build-system]
requires = [
    "setuptools>=59",
    "setuptools_scm[toml]>=6.2",
    "cython>=0.29.24",
    "oldest-supported-numpy",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
   "skmisc/loess/tests"
]
doctest_optionflags = "ALLOW_UNICODE ALLOW_BYTES NORMALIZE_WHITESPACE"
addopts = "--pyargs --cov=skmisc --cov-report=xml --doctest-ignore-import-errors --doctest-modules --import-mode=importlib"

[tool.coverage.run]
branch = true
source = ["skmisc"]
omit =[
    "setup.py",
    "*/setup.py",
    "*/*/setup.py",
    "*/__config__.py",
    "skmisc/_version.py",
]

disable_warnings = ["include-ignored"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^def test_",
    "if __name__ == .__main__.:",
    "raise NotImplementedError('Not Implemented')",
]
precision = 1

[tool.setuptools_scm]
fallback_version = "999"
version_scheme = 'post-release'
