[metadata]
name = scikit-misc
description = Miscellaneous tools for scientific computing.
url = https://github.com/has2k1/scikit-misc
license = BSD (3-clause)
license_files = LICENSE
platforms = linux, macosx, windows
author = Hassan Kibirige
author_email = has2k1@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Fortran
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

project_urls =
    Documentation = https://has2k1.github.io/scikit-misc
    Source = https://github.com/has2k1/scikit-misc
    Bug Tracker = https://github.com/has2k1/scikit-misc/issues
    CI = https://github.com/has2k1/scikit-misc/actions


[options]
packages = find:
install_requires =
    numpy>=1.14.0
python_requires = >=3.8
zip_safe = False

[options.extras_require]
all =
    scikit-misc[doc]
    scikit-misc[test]
    scikit-misc[dev]

doc =
    sphinx
    sphinx_rtd_theme

test =
    pytest-cov
    pep8
    flake8

dev =
    wheel
    twine

[bdist_wheel]


[versioneer]
VCS = git
style = pep440
versionfile_source = skmisc/_version.py
versionfile_build = skmisc/_version.py
tag_prefix = v
parentdir_prefix = skmisc-
